# rust-web-server-benchmark

./: Cargo.toml  README.md  script.txt  todo
_dist/: error_page.html  http_spec.html  small.html
cli/: Cargo.toml
cli/src/: lib.rs
files/: Cargo.toml  request-examle
files/src/: lib.rs
hyperServer/: Cargo.toml
hyperServer/src/: main.rs
penetrator/: Cargo.toml  README.md
penetrator/src/: cli.rs  lib.rs  main.rs  penetrator.rs
resources/templates/: stats_table_entry.html
server/: Cargo.toml
server/src/: cli.rs  file.rs  main.rs  request.rs  response.rs
server/src/event_loop/: ffi.rs  mod.rs  nbserver.rs  unsafe_c.rs
server/src/hyper_server/: mod.rs
server/src/my_server/: mod.rs  requests.rs  server.rs
server/src/nonblocking/: ffi.rs  mod.rs  nbserver.rs
server/src/rouille/: mod.rs
server/src/single_thread/: mod.rs
server/src/threaded/: mod.rs  request_handler.rs  server.rs
server/src/threaded/controller/: error_controller.rs  file_controller.rs  mod.rs  stats_controller.rs
server/src/threaded/resources/templates/: error_page.html  stats.html
webserver/: Cargo.toml
webserver/src/: cli.rs  file_util.rs  main.rs  requests.rs  server.rs  threadpool.rs
