[package]
name = "hyperServer"
version = "0.1.0"
authors = ["julian <julianMBP>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
cli = { path = "../cli" }
files = { path = "../files" }
