[package]
name = "penetrator"
version = "0.1.0"
authors = ["Jörg Stenger <joergstenger@exozet.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.6"
futures = "0.3.5"
reqwest = "0.10.6"
tokio = { version = "0.2", features = ["macros", "tcp", "dns", "io-util"] }
async-std = "1.0.1"