[package]
name = "penetrator"
version = "0.1.0"
authors = ["Jörg Stenger <joergstenger@exozet.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.5"
reqwest = "0.10.6"
tokio = { version = "0.2", features = ["macros"] }
colored = "1.9.3"
clap = {version = "2.32", features = ["yaml"]}