[package]
name = "webserver"
version = "0.1.0"
authors = ["julian <julianMBP>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#general
cli = { path = "../cli" }
files = { path = "../files" }
#hyper
hyper = "0.13.6"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"